- Move the disconnect link to the Presence widget (better for mobile) - Fix lot of little mobiles issues - Show avatars in Posts on mobile + CSS fixs - Hive Chats on mobile

--- a/app/widgets/Media/media.css
+++ b/app/widgets/Media/media.css
@@ -109,7 +109,7 @@
 
 #media .size {
     position: absolute;
-    top: 0px;
+    top: -3em;
     right: 0px;
     line-height: 3em;
     display: block;
